# CMSIS_5

./: .mbed_lib.json  .mbedignore  CMakeLists.txt  README.md
CMSIS/: .mbedignore
CMSIS/DSP/: .mbedignore
CMSIS/DSP/Source/: .make_mbed_ignore.py.swp  make_mbed_ignore.py
CMSIS/DSP/Source/BasicMathFunctions/: .mbedignore
CMSIS/DSP/Source/BayesFunctions/: .mbedignore
CMSIS/DSP/Source/CommonTables/: .mbedignore
CMSIS/DSP/Source/ComplexMathFunctions/: .mbedignore
CMSIS/DSP/Source/ControllerFunctions/: .mbedignore
CMSIS/DSP/Source/DistanceFunctions/: .mbedignore
CMSIS/DSP/Source/FastMathFunctions/: .mbedignore
CMSIS/DSP/Source/FilteringFunctions/: .mbedignore
CMSIS/DSP/Source/MatrixFunctions/: .mbedignore
CMSIS/DSP/Source/SVMFunctions/: .mbedignore
CMSIS/DSP/Source/StatisticsFunctions/: .mbedignore
CMSIS/DSP/Source/SupportFunctions/: .mbedignore
CMSIS/DSP/Source/TransformFunctions/: .mbedignore
CMSIS/NN/: .mbedignore
